[tool.poetry]
name = "toloka-tracker"
version = "0.1.0"
description = ""
authors = ["Andrei Kirilenko <hotckiss@yandex-team.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.2"
fastapi = "^0.70.1"
SQLAlchemy = "^1.4.29"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
